Auto-import contest problems

--- a/src/fibonacci-primarie/2023-prima-fase/contest/contest.mdx
+++ b/src/fibonacci-primarie/2023-prima-fase/contest/contest.mdx
@@ -1,35 +1,26 @@
-import {
-  M6StringaOiiFib,
-  M8GiocoOca,
-  M9EasyRettangoliCorniceFib,
-  M14Bigliettino,
-} from "problemset";
-import { P9MangiaCarota, P10RiordinaIstruzioni, P11OggettiIfelse } from "problemset";
-import { A5CancellaPermutazioneFib } from "problemset";
-
 <Contest>
 
 ## Sezione 1: pensiero logico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={M14Bigliettino} />
-  <Problem points={[5, 1, 0]} statement={M8GiocoOca} />
-  <Problem points={[5, 1, 0]} statement={M9EasyRettangoliCorniceFib} />
-  <Problem points={[5, 1, 0]} statement={M6StringaOiiFib} />
+  <Problem points={[5, 1, 0]}><M14Bigliettino /></Problem>
+  <Problem points={[5, 1, 0]}><M8GiocoOca /></Problem>
+  <Problem points={[5, 1, 0]}><M9EasyRettangoliCorniceFib /></Problem>
+  <Problem points={[5, 1, 0]}><M6StringaOiiFib /></Problem>
 </Section>
 
 ## Sezione 2: pensiero algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={A5CancellaPermutazioneFib} />
+  <Problem points={[5, 0, 0]}><A5CancellaPermutazioneFib /></Problem>
 </Section>
 
 ## Sezione 3: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P10RiordinaIstruzioni} />
-  <Problem points={[5, 1, 0]} statement={P11OggettiIfelse} />
-  <Problem points={[5, 1, 0]} statement={P9MangiaCarota} />
+  <Problem points={[5, 1, 0]}><P10RiordinaIstruzioni /></Problem>
+  <Problem points={[5, 1, 0]}><P11OggettiIfelse /></Problem>
+  <Problem points={[5, 1, 0]}><P9MangiaCarota /></Problem>
 </Section>
 
 </Contest>
