--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/contest.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/contest.mdx
@@ -1,22 +1,19 @@
-import { P1Sequenza, P2Condizioni, P3Mediana } from "problemset";
-import { S1ApriPorte, S2AlzaTorre, S3GiraRuota } from "problemset";
-
 <Contest>
 
 ## Sezione 1: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P1Sequenza} />
-  <Problem points={[5, 1, 0]} statement={P2Condizioni} />
-  <Problem points={[5, 1, 0]} statement={P3Mediana} />
+  <Problem points={[5, 1, 0]}><P1Sequenza /></Problem>
+  <Problem points={[5, 1, 0]}><P2Condizioni /></Problem>
+  <Problem points={[5, 1, 0]}><P3Mediana /></Problem>
 </Section>
 
 ## Sezione 2: programmazione
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={S1ApriPorte} />
-  <Problem points={[5, 0, 0]} statement={S2AlzaTorre} />
-  <Problem points={[5, 0, 0]} statement={S3GiraRuota} />
+  <Problem points={[5, 0, 0]}><S1ApriPorte /></Problem>
+  <Problem points={[5, 0, 0]}><S2AlzaTorre /></Problem>
+  <Problem points={[5, 0, 0]}><S3GiraRuota /></Problem>
 </Section>
 
 </Contest>
