--- a/src/fibonacci-primarie/2023-seconda-fase/contest/contest.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/contest.mdx
@@ -1,28 +1,19 @@
-import { P1CicliCondizioni } from "problemset";
-import { P2BalleDiFieno } from "problemset";
-import { P3PileDiCarote } from "problemset";
-import { P4Contatore } from "problemset";
-import { S1OrdinaPalloni } from "problemset";
-import { S2GaraSalto } from "problemset";
-import { S3SquadreBasket } from "problemset";
-import { S4TorriGemelle } from "problemset";
-
 <Contest>
 
 ## Sezione 1: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P1CicliCondizioni} />
-  <Problem points={[5, 1, 0]} statement={P2BalleDiFieno} />
-  <Problem points={[5, 1, 0]} statement={P3PileDiCarote} />
+  <Problem points={[5, 1, 0]}><P1CicliCondizioni /></Problem>
+  <Problem points={[5, 1, 0]}><P2BalleDiFieno /></Problem>
+  <Problem points={[5, 1, 0]}><P3PileDiCarote /></Problem>
 </Section>
 
 ## Sezione 2: programmazione
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={S1OrdinaPalloni} />
-  <Problem points={[5, 0, 0]} statement={S2GaraSalto} />
-  <Problem points={[5, 0, 0]} statement={S3SquadreBasket} />
+  <Problem points={[5, 0, 0]}><S1OrdinaPalloni /></Problem>
+  <Problem points={[5, 0, 0]}><S2GaraSalto /></Problem>
+  <Problem points={[5, 0, 0]}><S3SquadreBasket /></Problem>
 </Section>
 
 </Contest>
