--- a/src/fibonacci-secondarie/2022-prima-fase/contest/contest.mdx
+++ b/src/fibonacci-secondarie/2022-prima-fase/contest/contest.mdx
@@ -1,30 +1,26 @@
-import { M2Libri, M4Specchi, M5Quadrato } from "problemset";
-import { P1Sequenza, P2Condizioni, P3CicloLista } from "problemset";
-import { A1Parole, A2CompraColori } from "problemset";
-
 <Contest>
 
 ## Sezione 1: pensiero logico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={M2Libri} />
-  <Problem points={[5, 1, 0]} statement={M4Specchi} />
-  <Problem points={[5, 1, 0]} statement={M5Quadrato} />
+  <Problem points={[5, 1, 0]}><M2Libri /></Problem>
+  <Problem points={[5, 1, 0]}><M4Specchi /></Problem>
+  <Problem points={[5, 1, 0]}><M5Quadrato /></Problem>
 </Section>
 
 ## Sezione 2: pensiero algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={A1Parole} />
-  <Problem points={[5, 0, 0]} statement={A2CompraColori} />
+  <Problem points={[5, 0, 0]}><A1Parole /></Problem>
+  <Problem points={[5, 0, 0]}><A2CompraColori /></Problem>
 </Section>
 
 ## Sezione 3: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P1Sequenza} />
-  <Problem points={[5, 1, 0]} statement={P2Condizioni} />
-  <Problem points={[5, 1, 0]} statement={P3CicloLista} />
+  <Problem points={[5, 1, 0]}><P1Sequenza /></Problem>
+  <Problem points={[5, 1, 0]}><P2Condizioni /></Problem>
+  <Problem points={[5, 1, 0]}><P3CicloLista /></Problem>
 </Section>
 
 </Contest>
