--- a/src/fibonacci-secondarie/2023-prima-fase/contest/contest.mdx
+++ b/src/fibonacci-secondarie/2023-prima-fase/contest/contest.mdx
@@ -1,30 +1,26 @@
-import { M5PallineTricoloriFib, M6StringaOiiFib, M8GiocoOca } from "problemset";
-import { P7TerzoNumeroFib, P10RiordinaIstruzioni, P11OggettiIfelse } from "problemset";
-import { A5CancellaPermutazioneFib, A14RettangoliCornice } from "problemset";
-
 <Contest>
 
 ## Sezione 1: pensiero logico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={M8GiocoOca} />
-  <Problem points={[5, 1, 0]} statement={M5PallineTricoloriFib} />
-  <Problem points={[5, 1, 0]} statement={M6StringaOiiFib} />
+  <Problem points={[5, 1, 0]}><M8GiocoOca /></Problem>
+  <Problem points={[5, 1, 0]}><M5PallineTricoloriFib /></Problem>
+  <Problem points={[5, 1, 0]}><M6StringaOiiFib /></Problem>
 </Section>
 
 ## Sezione 2: pensiero algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={A5CancellaPermutazioneFib} />
-  <Problem points={[5, 0, 0]} statement={A14RettangoliCornice} />
+  <Problem points={[5, 0, 0]}><A5CancellaPermutazioneFib /></Problem>
+  <Problem points={[5, 0, 0]}><A14RettangoliCornice /></Problem>
 </Section>
 
 ## Sezione 3: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P10RiordinaIstruzioni} />
-  <Problem points={[5, 1, 0]} statement={P11OggettiIfelse} />
-  <Problem points={[5, 1, 0]} statement={P7TerzoNumeroFib} />
+  <Problem points={[5, 1, 0]}><P10RiordinaIstruzioni /></Problem>
+  <Problem points={[5, 1, 0]}><P11OggettiIfelse /></Problem>
+  <Problem points={[5, 1, 0]}><P7TerzoNumeroFib /></Problem>
 </Section>
 
 </Contest>
