--- a/src/fibonacci-secondarie/2023-seconda-fase-demo/contest/contest.mdx
+++ b/src/fibonacci-secondarie/2023-seconda-fase-demo/contest/contest.mdx
@@ -1,22 +1,19 @@
-import { P2Condizioni, P3Mediana, P4CicloLista } from "problemset";
-import { S2AlzaTorre, S3GiraRuota, S4Muro } from "problemset";
-
 <Contest>
 
 ## Sezione 1: procedimenti procedurali
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P2Condizioni} />
-  <Problem points={[5, 1, 0]} statement={P3Mediana} />
-  <Problem points={[5, 1, 0]} statement={P4CicloLista} />
+  <Problem points={[5, 1, 0]}><P2Condizioni /></Problem>
+  <Problem points={[5, 1, 0]}><P3Mediana /></Problem>
+  <Problem points={[5, 1, 0]}><P4CicloLista /></Problem>
 </Section>
 
 ## Sezione 2: programmazione
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={S2AlzaTorre} />
-  <Problem points={[5, 0, 0]} statement={S3GiraRuota} />
-  <Problem points={[5, 0, 0]} statement={S4Muro} />
+  <Problem points={[5, 0, 0]}><S2AlzaTorre /></Problem>
+  <Problem points={[5, 0, 0]}><S3GiraRuota /></Problem>
+  <Problem points={[5, 0, 0]}><S4Muro /></Problem>
 </Section>
 
 </Contest>
