--- a/src/fibonacci-secondarie/2023-terza-fase/contest/contest.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/contest.mdx
@@ -1,15 +1,10 @@
-import { S1Cioccolato } from "problemset";
-import { S2Montagna } from "problemset";
-import { S3Calcolatrice } from "problemset";
-import { S4Superbunny } from "problemset";
-
 <Contest>
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={S1Cioccolato} />
-  <Problem points={[5, 0, 0]} statement={S2Montagna} />
-  <Problem points={[5, 0, 0]} statement={S3Calcolatrice} />
-  <Problem points={[5, 0, 0]} statement={S4Superbunny} />
+  <Problem points={[5, 0, 0]}><S1Cioccolato /></Problem>
+  <Problem points={[5, 0, 0]}><S2Montagna /></Problem>
+  <Problem points={[5, 0, 0]}><S3Calcolatrice /></Problem>
+  <Problem points={[5, 0, 0]}><S4Superbunny /></Problem>
 </Section>
 
 </Contest>
