--- a/src/scolastiche/2021/contest/contest.mdx
+++ b/src/scolastiche/2021/contest/contest.mdx
@@ -1,46 +1,38 @@
-import { Logica2pt01, Logica2pt02 } from "problemset";
-import { Logica3pt03, Logica3pt04, Logica3pt05 } from "problemset";
-import { Prog2pt06, Prog2pt07, Prog2pt08 } from "problemset";
-import { Prog3pt09, Prog3pt10, Prog3pt11, Prog3pt12 } from "problemset";
-import { Algo2pt13, Algo2pt14, Algo2pt15 } from "problemset";
-import { Algo3pt16, Algo3pt17, Algo3pt18 } from "problemset";
-import { Algo4pt19, Algo4pt20 } from "problemset";
-
 <Contest>
 
 ## Sezione 1: Esercizi a carattere logico-matematico
 
 <Section>
-  <Problem points={[2, 0, 0]} statement={Logica2pt01} />
-  <Problem points={[2, 0, 0]} statement={Logica2pt02} />
-  <Problem points={[3, 0, 0]} statement={Logica3pt03} />
-  <Problem points={[3, 0, 0]} statement={Logica3pt04} />
-  <Problem points={[3, 0, 0]} statement={Logica3pt05} />
+  <Problem points={[2, 0, 0]}><Logica2Pt01 /></Problem>
+  <Problem points={[2, 0, 0]}><Logica2Pt02 /></Problem>
+  <Problem points={[3, 0, 0]}><Logica3Pt03 /></Problem>
+  <Problem points={[3, 0, 0]}><Logica3Pt04 /></Problem>
+  <Problem points={[3, 0, 0]}><Logica3Pt05 /></Problem>
 </Section>
 
 ## Sezione 2: Esercizi di programmazione
 
 <Section>
-  <Problem points={[2, 0, 0]} statement={Prog2pt06} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt07} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt08} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt09} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt10} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt11} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt12} />
+  <Problem points={[2, 0, 0]}><Prog2Pt06 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt07 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt08 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt09 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt10 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt11 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt12 /></Problem>
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
 <Section>
-  <Problem points={[2, 0, 0]} statement={Algo2pt13} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt14} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt15} />
-  <Problem points={[3, 0, 0]} statement={Algo3pt16} />
-  <Problem points={[3, 0, 0]} statement={Algo3pt17} />
-  <Problem points={[3, 0, 0]} statement={Algo3pt18} />
-  <Problem points={[4, 0, 0]} statement={Algo4pt19} />
-  <Problem points={[4, 0, 0]} statement={Algo4pt20} />
+  <Problem points={[2, 0, 0]}><Algo2Pt13 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt14 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt15 /></Problem>
+  <Problem points={[3, 0, 0]}><Algo3Pt16 /></Problem>
+  <Problem points={[3, 0, 0]}><Algo3Pt17 /></Problem>
+  <Problem points={[3, 0, 0]}><Algo3Pt18 /></Problem>
+  <Problem points={[4, 0, 0]}><Algo4Pt19 /></Problem>
+  <Problem points={[4, 0, 0]}><Algo4Pt20 /></Problem>
 </Section>
 
 </Contest>
