--- a/src/scolastiche/2022-demo/contest/contest.mdx
+++ b/src/scolastiche/2022-demo/contest/contest.mdx
@@ -1,30 +1,26 @@
-import { Logica1, Logica2, Logica3 } from "problemset";
-import { Prog1, Prog2, Prog3 } from "problemset";
-import { Algo1, Algo2 } from "problemset";
-
 <Contest>
 
 ## Sezione 1: Esercizi a carattere logico-matematico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={Logica1} />
-  <Problem points={[5, 1, 0]} statement={Logica2} />
-  <Problem points={[5, 1, 0]} statement={Logica3} />
+  <Problem points={[5, 1, 0]}><Logica1 /></Problem>
+  <Problem points={[5, 1, 0]}><Logica2 /></Problem>
+  <Problem points={[5, 1, 0]}><Logica3 /></Problem>
 </Section>
 
 ## Sezione 2: Esercizi di programmazione
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={Prog1} />
-  <Problem points={[5, 1, 0]} statement={Prog2} />
-  <Problem points={[5, 1, 0]} statement={Prog3} />
+  <Problem points={[5, 1, 0]}><Prog1 /></Problem>
+  <Problem points={[5, 1, 0]}><Prog2 /></Problem>
+  <Problem points={[5, 1, 0]}><Prog3 /></Problem>
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={Algo1} />
-  <Problem points={[5, 0, 0]} statement={Algo2} />
+  <Problem points={[5, 0, 0]}><Algo1 /></Problem>
+  <Problem points={[5, 0, 0]}><Algo2 /></Problem>
 </Section>
 
 </Contest>
