--- a/src/scolastiche/2022/contest/contest.mdx
+++ b/src/scolastiche/2022/contest/contest.mdx
@@ -1,43 +1,36 @@
-import { M3CavalieriFurfanti, M6NumeroSpaccatoIn4, M8PotenzeDi10 } from "problemset";
-import { M4Domino, M5SommeCoppie, M7NumeriColorati } from "problemset";
-import { P5Mediana, P8IncrementaDi7, P9TrovaElemento } from "problemset";
-import { P2StampaInteriLessicografico, P4SequenzaAlternante, P7Invariante } from "problemset";
-import { A3DueScatole, A6Rettangoli } from "problemset";
-import { A1ComponentiConnesse, A2MaxMenoMin } from "problemset";
-
 <Contest>
 
 ## Sezione 1: Esercizi a carattere logico-matematico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={M3CavalieriFurfanti} />
-  <Problem points={[5, 1, 0]} statement={M6NumeroSpaccatoIn4} />
-  <Problem points={[5, 1, 0]} statement={M8PotenzeDi10} />
+  <Problem points={[5, 1, 0]}><M3CavalieriFurfanti /></Problem>
+  <Problem points={[5, 1, 0]}><M6NumeroSpaccatoIn4 /></Problem>
+  <Problem points={[5, 1, 0]}><M8PotenzeDi10 /></Problem>
 
-  <Problem points={[5, 1, 0]} statement={M4Domino} />
-  <Problem points={[5, 1, 0]} statement={M5SommeCoppie} />
-  <Problem points={[5, 1, 0]} statement={M7NumeriColorati} />
+  <Problem points={[5, 1, 0]}><M4Domino /></Problem>
+  <Problem points={[5, 1, 0]}><M5SommeCoppie /></Problem>
+  <Problem points={[5, 1, 0]}><M7NumeriColorati /></Problem>
 </Section>
 
 ## Sezione 2: Esercizi di programmazione
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P5Mediana} />
-  <Problem points={[5, 1, 0]} statement={P8IncrementaDi7} />
-  <Problem points={[5, 1, 0]} statement={P9TrovaElemento} />
+  <Problem points={[5, 1, 0]}><P5Mediana /></Problem>
+  <Problem points={[5, 1, 0]}><P8IncrementaDi7 /></Problem>
+  <Problem points={[5, 1, 0]}><P9TrovaElemento /></Problem>
 
-  <Problem points={[5, 1, 0]} statement={P2StampaInteriLessicografico} />
-  <Problem points={[5, 1, 0]} statement={P4SequenzaAlternante} />
-  <Problem points={[5, 1, 0]} statement={P7Invariante} />
+  <Problem points={[5, 1, 0]}><P2StampaInteriLessicografico /></Problem>
+  <Problem points={[5, 1, 0]}><P4SequenzaAlternante /></Problem>
+  <Problem points={[5, 1, 0]}><P7Invariante /></Problem>
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={A3DueScatole} />
-  <Problem points={[5, 0, 0]} statement={A6Rettangoli} />
-  <Problem points={[5, 0, 0]} statement={A1ComponentiConnesse} />
-  <Problem points={[5, 0, 0]} statement={A2MaxMenoMin} />
+  <Problem points={[5, 0, 0]}><A3DueScatole /></Problem>
+  <Problem points={[5, 0, 0]}><A6Rettangoli /></Problem>
+  <Problem points={[5, 0, 0]}><A1ComponentiConnesse /></Problem>
+  <Problem points={[5, 0, 0]}><A2MaxMenoMin /></Problem>
 </Section>
 
 </Contest>
