--- a/src/scolastiche/2023/contest/contest.mdx
+++ b/src/scolastiche/2023/contest/contest.mdx
@@ -1,57 +1,34 @@
-import {
-  M5PallineTricolori,
-  M6StringaOii,
-  M9HardRettangoliCornice,
-  M12CavalieriFurfanti,
-  M17QuasiOrdinato,
-} from "problemset";
-import {
-  P2SommaZero,
-  P3StepInvariante,
-  P4IntervalliNascosti,
-  P5PiuStampato,
-  P6WalkBack,
-  P7TerzoNumero,
-  P8SostituisciRiga,
-} from "problemset";
-import {
-  A1OrdinaColonne,
-  A5CancellaPermutazione,
-  A6MuroMattoni,
-  A8GrafoDisconnesso,
-} from "problemset";
-
 <Contest>
 
 ## Sezione 1: Esercizi a carattere logico-matematico
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={M5PallineTricolori} />
-  <Problem points={[5, 1, 0]} statement={M9HardRettangoliCornice} />
-  <Problem points={[5, 1, 0]} statement={M6StringaOii} />
-  <Problem points={[5, 1, 0]} statement={M12CavalieriFurfanti} />
-  <Problem points={[5, 1, 0]} statement={M17QuasiOrdinato} />
+  <Problem points={[5, 1, 0]}><M5PallineTricolori /></Problem>
+  <Problem points={[5, 1, 0]}><M9HardRettangoliCornice /></Problem>
+  <Problem points={[5, 1, 0]}><M6StringaOii /></Problem>
+  <Problem points={[5, 1, 0]}><M12CavalieriFurfanti /></Problem>
+  <Problem points={[5, 1, 0]}><M17QuasiOrdinato /></Problem>
 </Section>
 
 ## Sezione 2: Esercizi di programmazione
 
 <Section>
-  <Problem points={[5, 1, 0]} statement={P8SostituisciRiga} />
-  <Problem points={[5, 1, 0]} statement={P7TerzoNumero} />
-  <Problem points={[5, 1, 0]} statement={P2SommaZero} />
-  <Problem points={[5, 1, 0]} statement={P6WalkBack} />
-  <Problem points={[5, 1, 0]} statement={P3StepInvariante} />
-  <Problem points={[5, 1, 0]} statement={P4IntervalliNascosti} />
-  <Problem points={[5, 1, 0]} statement={P5PiuStampato} />
+  <Problem points={[5, 1, 0]}><P8SostituisciRiga /></Problem>
+  <Problem points={[5, 1, 0]}><P7TerzoNumero /></Problem>
+  <Problem points={[5, 1, 0]}><P2SommaZero /></Problem>
+  <Problem points={[5, 1, 0]}><P6WalkBack /></Problem>
+  <Problem points={[5, 1, 0]}><P3StepInvariante /></Problem>
+  <Problem points={[5, 1, 0]}><P4IntervalliNascosti /></Problem>
+  <Problem points={[5, 1, 0]}><P5PiuStampato /></Problem>
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
 <Section>
-  <Problem points={[5, 0, 0]} statement={A1OrdinaColonne} />
-  <Problem points={[5, 0, 0]} statement={A5CancellaPermutazione} />
-  <Problem points={[5, 0, 0]} statement={A6MuroMattoni} />
-  <Problem points={[5, 0, 0]} statement={A8GrafoDisconnesso} />
+  <Problem points={[5, 0, 0]}><A1OrdinaColonne /></Problem>
+  <Problem points={[5, 0, 0]}><A5CancellaPermutazione /></Problem>
+  <Problem points={[5, 0, 0]}><A6MuroMattoni /></Problem>
+  <Problem points={[5, 0, 0]}><A8GrafoDisconnesso /></Problem>
 </Section>
 
 </Contest>
