--- a/src/scolastiche/2019/contest/contest.mdx
+++ b/src/scolastiche/2019/contest/contest.mdx
@@ -1,48 +1,38 @@
-import { Logica1pt01, Logica1pt02 } from "problemset";
-import { Logica2pt03, Logica2pt04 } from "problemset";
-import { Logica3pt05 } from "problemset";
-import { Prog1pt06 } from "problemset";
-import { Prog2pt07, Prog2pt08, Prog2pt09, Prog2pt10 } from "problemset";
-import { Prog3pt11, Prog3pt12 } from "problemset";
-import { Algo1pt13, Algo1pt14 } from "problemset";
-import { Algo2pt15, Algo2pt16, Algo2pt17, Algo2pt18 } from "problemset";
-import { Algo3pt19, Algo3pt20 } from "problemset";
-
 <Contest>
 
 ## Sezione 1: Esercizi a carattere logico-matematico
 
 <Section>
-  <Problem points={[1, 0, 0]} statement={Logica1pt01} />
-  <Problem points={[1, 0, 0]} statement={Logica1pt02} />
-  <Problem points={[2, 0, 0]} statement={Logica2pt03} />
-  <Problem points={[2, 0, 0]} statement={Logica2pt04} />
-  <Problem points={[3, 0, 0]} statement={Logica3pt05} />
+  <Problem points={[1, 0, 0]}><Logica1Pt01 /></Problem>
+  <Problem points={[1, 0, 0]}><Logica1Pt02 /></Problem>
+  <Problem points={[2, 0, 0]}><Logica2Pt03 /></Problem>
+  <Problem points={[2, 0, 0]}><Logica2Pt04 /></Problem>
+  <Problem points={[3, 0, 0]}><Logica3Pt05 /></Problem>
 </Section>
 
 ## Sezione 2: Esercizi di programmazione
 
 <Section>
-  <Problem points={[1, 0, 0]} statement={Prog1pt06} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt07} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt08} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt09} />
-  <Problem points={[2, 0, 0]} statement={Prog2pt10} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt11} />
-  <Problem points={[3, 0, 0]} statement={Prog3pt12} />
+  <Problem points={[1, 0, 0]}><Prog1Pt06 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt07 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt08 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt09 /></Problem>
+  <Problem points={[2, 0, 0]}><Prog2Pt10 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt11 /></Problem>
+  <Problem points={[3, 0, 0]}><Prog3Pt12 /></Problem>
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
 <Section>
-  <Problem points={[1, 0, 0]} statement={Algo1pt13} />
-  <Problem points={[1, 0, 0]} statement={Algo1pt14} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt15} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt16} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt17} />
-  <Problem points={[2, 0, 0]} statement={Algo2pt18} />
-  <Problem points={[3, 0, 0]} statement={Algo3pt19} />
-  <Problem points={[3, 0, 0]} statement={Algo3pt20} />
+  <Problem points={[1, 0, 0]}><Algo1Pt13 /></Problem>
+  <Problem points={[1, 0, 0]}><Algo1Pt14 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt15 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt16 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt17 /></Problem>
+  <Problem points={[2, 0, 0]}><Algo2Pt18 /></Problem>
+  <Problem points={[3, 0, 0]}><Algo3Pt19 /></Problem>
+  <Problem points={[3, 0, 0]}><Algo3Pt20 /></Problem>
 </Section>
 
 </Contest>
