--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-3-gira-ruota/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-3-gira-ruota/question.mdx
@@ -30,7 +30,7 @@ _**Attenzione:** c'è sempre almeno una posizione della ruota che consente a Tip
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
