--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-4-muro/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-4-muro/question.mdx
@@ -34,7 +34,7 @@ Aiuta Bunny a pitturare di modo da lasciare più colori possibile alla fine del 
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
