--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/question.mdx
@@ -27,7 +27,7 @@ Organizza il viaggio sulle montagne, evitando che la macchina si fermi prima di 
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
