--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
@@ -38,7 +38,7 @@ _**Avvertimento:** incastrare un blocco grosso in un altro blocco può non esser
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
