--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
@@ -19,7 +19,7 @@ Scrivi un programma che consenta a Tip-Tap di mangiare sempre la carota!
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
