--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/question.mdx
@@ -29,7 +29,7 @@ abbastanza alta, riportando l'altezza totale della torre con l'operazione:
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
