--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-1-ordina-palloni/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-1-ordina-palloni/question.mdx
@@ -22,7 +22,7 @@ Scrivi un programma che consenta a Tip-Tap di sistemare tutti i suoi palloni!
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
