--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/question.mdx
@@ -26,7 +26,7 @@ Aiuta Carol a preparare il fienile per la gara di salto!
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
