--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
@@ -28,7 +28,7 @@ Aiuta Bunny a fare le squadre per la partita!
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
