--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
@@ -25,7 +25,7 @@ Aiuta Tip-Tap a completare la tettoia come previsto!
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
