--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/question.mdx
@@ -29,7 +29,7 @@ Aiuta Tip-Tap a spezzare la tavoletta $K$ volte, in modo gli rimanga il maggior 
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
