--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/question.mdx
@@ -28,7 +28,7 @@ _**Attenzione:** non ti viene richiesto di ricostruire le operazioni da fare, ba
   initialBlocks={initialBlocks}
   testcases={testcases}
   debug={{ logBlocks: false, logJs: false, logVariables: false }}
-  Visualizer={Visualizer}
+  visualizer={Visualizer}
 />
 
 > Un possibile programma corretto è il seguente:
