Move asy inside asy folder

--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/question.mdx
@@ -45,4 +45,4 @@ Aiuta Carol a preparare il fienile per la gara di salto!
 > Una volta terminato di scorrere tutte le pile, Carol torna all'ultima pila a cui ha aggiunto una
 > carota (_dovesalto_) e ci aggiunge la seconda carota.
 >
-> ![primarie](primarie.asy) ![secondarie](secondarie.asy)
+> ![primarie](asy/primarie.asy) ![secondarie](asy/secondarie.asy)
