--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
@@ -40,4 +40,4 @@ Aiuta Bunny a fare le squadre per la partita!
 > ingrandire la squadra. Se non hanno la stessa altezza Bunny scarta il più basso dei due,
 > visto che non ha più speranze di trovare un avversario della stessa altezza nell'altra fila.
 >
-> ![primarie](primarie.asy) ![secondarie](secondarie.asy)
+> ![primarie](asy/primarie.asy) ![secondarie](asy/secondarie.asy)
