--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
@@ -44,4 +44,4 @@ Aiuta Tip-Tap a completare la tettoia come previsto!
 > totale da costruire che l'altezza totale dei blocchetti di $M$, quindi è ancora vero che
 > l'altezza totale dei blocchetti è uguale all'altezza totale delle colonne da costruire.
 >
-> ![secondarie](secondarie.asy)
+> ![secondarie](asy/secondarie.asy)
