Use kebab case for file names

--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-4-muro/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-4-muro/question.mdx
@@ -1,4 +1,4 @@
-import initialBlocks from "./initialBlocks.json";
+import initialBlocks from "./initial-blocks.json";
 import customBlocks from "./s4.blocks.yaml";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
