--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
@@ -1,4 +1,4 @@
-import initialBlocks from "./initialBlocks.json";
+import initialBlocks from "./initial-blocks.json";
 import customBlocks from "./s4.blocks.yaml";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
