aggiunte soluzioni terza fase 2024

--- a/src/fibonacci-secondarie/2024-terza-fase/contest/s-1-salta-tutto/question.mdx
+++ b/src/fibonacci-secondarie/2024-terza-fase/contest/s-1-salta-tutto/question.mdx
@@ -25,3 +25,10 @@ Scrivi un programma che consenta ad Carol di completare la gara!
 />
 
 > Un possibile programma corretto è il seguente:
+>
+> ![soluzione](sol.png)
+>
+> Secondo questo programma, fino a che non ha raggiunto la bandierina, la protagonista
+> controlla se ha un ostacolo davanti a sé: se sì, salta; se no, avanza.
+>
+> ![statistiche](stats.asy)
