added stats for finali fibonacci

--- a/src/fibonacci-secondarie/2024-terza-fase/contest/s-2-spegni-tutto/question.mdx
+++ b/src/fibonacci-secondarie/2024-terza-fase/contest/s-2-spegni-tutto/question.mdx
@@ -39,3 +39,5 @@ Contano come azioni sia svitare una lampadina che premere un interruttore.
 > 3. Se invece la lampadina corrente è spenta, non occorre fare nulla e possiamo andare avanti.
 >
 > Se poi alla fine del procedimento l'ultima lampadina fosse ancora accesa, bisognerà spegnerla.
+>
+> ![statistiche](stats.asy)
