--- a/src/fibonacci-secondarie/2024-terza-fase/contest/s-3-abbassa-tutto/question.mdx
+++ b/src/fibonacci-secondarie/2024-terza-fase/contest/s-3-abbassa-tutto/question.mdx
@@ -42,3 +42,5 @@ Aiuta Allie ad azzerare il punteggio di tutti gli altri giocatori, spendendo men
 > Partiamo considerando la box $1$, che sicuramente si riferisce ad un giocatore che non è ancora a zero punti.
 > Poi consideriamo tutte le altre box $i$ da $2$ a $N$ tramite un ciclo: se il giocatore della box $i$-esima
 > ha ancora punti, e la box $i$-esima costa meno della box che abbiamo salvato in _min_, la sostituiamo a _min_.
+>
+> ![statistiche](stats.asy)
