--- a/src/fibonacci-secondarie/2024-terza-fase/contest/s-4-investi-tutto/question.mdx
+++ b/src/fibonacci-secondarie/2024-terza-fase/contest/s-4-investi-tutto/question.mdx
@@ -63,3 +63,5 @@ Nota inoltre che il tuo piano può pianificare un _prossimo titolo_ anche per ti
 > ipotizziamo di fare lo scambio: aggiorniamo quindi l'annotazione per $i$ e programmiamo di prendere $j$ dopo $i$.
 >
 > Ripetendo questo procedimento per tutti i titoli, andiamo a costruire il piano di investimento migliore!
+>
+> ![statistiche](stats.asy)
