aggiunta seconda domanda

--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-1-salta-tutto-caso-singolo/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-1-salta-tutto-caso-singolo/question.mdx
@@ -10,14 +10,14 @@ Se si avanza o atterra su una roccia alta si cade, perdendo la gara.
 Lo scopo della gara è di raggiungere la bandierina finale.
 Hai a disposizione questi blocchi:
 
-- `avanza`: avanza alla roccia successiva.
+- `avanza`: avanza alla roccia successiva se possibile (sta ferma se ha davanti un ostacolo).
 - `salta`: salta oltre alla prossima roccia, atterrando su quella dopo.
 - `termina`: finisci la gara.
 
 Nell'editor a blocchi qui sotto a destra, scrivi un programma che consenta ad Carol di completare la gara!
 
 Potrai trovare tutti i blocchi che ti servono cliccando sulla sezione _"Esecuzione"_, e trascinandoli nella finestra attaccandoli sotto al blocco _"Inizia qui"_ potrai comporre il tuo programma.
-Per provare la tua soluzione, premi sul pulsante verde con l'aeroplanino di carta: vedrai se è corretta, e potrai verificare il comportamento del programma tramite i
+Per provare la tua soluzione, premi sul pulsante _"Correggi la soluzione"_ verde con l'aeroplanino di carta: vedrai se è corretta, e potrai verificare il comportamento del programma tramite i
 tasti blu _"Esegui/pausa"_, _"Esegui un blocco"_, _"Ricomincia da capo"_.
 
 <Blockly
