--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/contest.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/contest.mdx
@@ -2,6 +2,7 @@
 
 <Section>
   <Problem points={[5, 0, 0]}><S1SaltaTuttoCasoSingolo /></Problem>
+  <Problem points={[5, 0, 0]}><S2SaltaTuttoLivelliNocicli /></Problem>
 </Section>
 
 **Lezione in costruzione, continua...**
