--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/contest.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/contest.mdx
@@ -3,6 +3,7 @@
 <Section>
   <Problem points={[5, 0, 0]}><S1SaltaTuttoCasoSingolo /></Problem>
   <Problem points={[5, 0, 0]}><S2SaltaTuttoLivelliNocicli /></Problem>
+  <Problem points={[5, 0, 0]}><S3SaltaTuttoCicloPiatto /></Problem>
 </Section>
 
 **Lezione in costruzione, continua...**
