--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
@@ -3,6 +3,7 @@ import initialBlocks from "./initial-blocks.json";
 import customBlocks from "./s1.blocks.yaml";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
+import { Hint } from "~/utils/hint";
 
 Siamo sempre alla corsa ad ostacoli di Carol, e hai a disposizione gli stessi blocchi di prima:
 
@@ -35,3 +36,7 @@ Cliccando su uno di questi simboli, potrai scegliere il livello su cui provare l
 > - Per superare anche il quarto livello, bisognerà avanzare una seconda volta prima del secondo salto: questa cosa non avrà effetto nel secondo e terzo livello, e quindi con questo superiamo tutti i livelli.
 
 Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa! Se l'hai risolta, dovresti vedere quattro _"V"_ verdi in alto a sinistra dopo la scritta **Livello**.
+
+{/* <Hint>
+  Puoi usare un treap di FFT!
+</Hint> */}
