--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
@@ -36,7 +36,16 @@ Cliccando su uno di questi simboli, potrai scegliere il livello su cui provare l
 > - Per superare anche il quarto livello, bisognerà avanzare una seconda volta prima del secondo salto: questa cosa non avrà effetto nel secondo e terzo livello, e quindi con questo superiamo tutti i livelli.
 
 Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa! Se l'hai risolta, dovresti vedere quattro _"V"_ verdi in alto a sinistra dopo la scritta **Livello**.
+Se non hai risolto tutto e ti senti in difficoltà, prova a leggere alcuni di questi suggerimenti:
 
-{/* <Hint>
-  Puoi usare un treap di FFT!
-</Hint> */}
+<Hint label="suggerimento 1">
+  Guarda bene tutti i livelli. Quante volte dovrai saltare?
+</Hint>
+
+<Hint label="suggerimento 2">
+  Quando fai l'azione _"avanza"_, il personaggio sta fermo se ha davanti un ostacolo. Come puoi sfruttare questa cosa?
+</Hint>
+
+<Hint label="suggerimento 3">
+  Guarda i livelli uno per volta: prima di ogni salto, quante volte devi avanzare per assicurarti di arrivare all'ostacolo?
+</Hint>
