fix soluzione domanda 4

--- a/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-4-pranzo-operazioni-bool/question.mdx
+++ b/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-4-pranzo-operazioni-bool/question.mdx
@@ -36,6 +36,5 @@ e il blocco "e/o" che combina due valori vero/falso (se scegli "e" il risultato 
 > ![soluzione](sol.png)
 >
 > Secondo questo programma, per ognuno degli $N$ cibi che Carol vuole mangiare, il protagonista
-> controlla se il prossimo cibo è una verdura, e in caso affermativo la cuoce prima di mangiarla.
-> A questo punto mangia il prossimo cibo (che sia verdura o frutta), che sarà di suo gradimento:
-> verdura cotta o frutta cruda.
+> controlla se il prossimo cibo è una verdura *e* non è giallo, e in caso affermativo lo cuoce prima di mangiarlo.
+> A questo punto mangia il prossimo cibo (che sia verdura o frutta, gialla o no), che sarà di suo gradimento.
